--- a/app/views/shared/_second-header.html.erb
+++ b/app/views/shared/_second-header.html.erb
@@ -1,3 +1,12 @@
 <header class='second-header'>
-  <%= link_to "medific", class:"second-logo", root_path %>
+  <div class='search-bar-contents'>
+
+  </div>
+  <div class='nav'>
+    <ul class='lists-left'>
+    </ul>
+    <ul class='lists-right'>
+      <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
+    </ul>
+  </div>
 </header>
