--- a/app/views/medications/edit.html.erb
+++ b/app/views/medications/edit.html.erb
@@ -54,6 +54,7 @@
       </div>
      <div class="sell-btn-contents">
         <%= f.submit "変更する" ,class:"sell-btn" %>
-        <%=link_to 'もどる', date_hospital_medication_path(@date_hospital, date_hospital_id: @date_hospital.id), class:"back-btn" %>
+        <%= link_to 'もどる', date_hospital_medication_path(@date_hospital, date_hospital_id: @date_hospital.id), class:"back-btn" %>
+        <%= link_to "削除", date_hospital_path(@date_hospital), method: :delete, data: { confirm: "本当に削除してよろしいですか？" }, class:"item-destroy" %>
       </div>
   <% end %>
