--- a/app/views/medications/edit.html.erb
+++ b/app/views/medications/edit.html.erb
@@ -1,12 +1,11 @@
 <%= render "shared/header" %>
-<p>お薬登録ページ</p>
+<p>お薬編集ページ</p>
 
-<%= form_with model: @total_info, url: date_hospital_medication_path(@date_hospital, @medication), method: :put, local: true do |f| %>
+<%= form_with model: @total_info, url: date_hospital_medication_path(@date_hospital, @medications), method: :put, local: true do |f| %>
 
+  <%= render 'shared/error_messages', model: f.object %>
 
-<%= render 'shared/error_messages', model: f.object %>
-
-  <div class='input-birth-wrap'>
+    <div class='input-birth-wrap'>
       <%= raw sprintf(
                   f.date_select(
                     :date,
@@ -19,39 +18,45 @@
                     date_separator: '%s'),
                   "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
       </div>
-      <div class="items-explain">
-        <div class="weight-bold-text">
-          病院名
-          <span class="indispensable">必須</span>
-        </div>
-        <%= f.text_area :hospital_name, class:"items-text", id:"item-info", placeholder:"病院名"  ,maxlength:"40" %>
+    <div class="items-explain">
+      <div class="weight-bold-text">
+        病院名
+        <span class="indispensable">必須</span>
       </div>
+      <%= f.text_area :hospital_name, class:"items-text", id:"item-info", placeholder:"病院名"  ,maxlength:"40" %>
     </div>
-    <div class="new-items">
-      <div id="medications">
-        <div class="medication-fields">
+    <!--ボタンをクリックしたらJavascriptファイル内の関数addForm()を実行する-->
+    <div class="bt_addForm">
+      <button type="button" id="add_form" class="add_form">薬を追加</button>
+    </div>
+    <fieldset>
+      <legend>薬の情報</legend>
+      <% @medications.each do |medication|%>
+        <div class="medication-fields", id="medications" >
           <div class="form-group">
             <%= f.label :medicine_name, '薬名' %>
-            <%= f.text_field :medicine_name, class: 'form-control' %>
+            <%= f.text_field :medicine_name, name: "total_info[medications][][medicine_name]", class: 'form-control', value: medication.medicine_name %>
           </div>
           <div class="form-group">
             <%= f.label :timing, '飲むタイミング' %>
-            <%= f.text_field :timing, class: 'form-control' %>
+            <%= f.text_field :timing, name: "total_info[medications][][timing]", class: 'form-control', value: medication.timing %>
           </div>
           <div class="form-group">
             <%= f.label :individual, '個数' %>
-            <%= f.text_field :individual, class: 'form-control' %>
+            <%= f.text_field :individual, name: "total_info[medications][][individual]", class: 'form-control', value: medication.individual %>
           </div>
           <div class="form-group">
             <%= f.label :days_supply, '何日分' %>
-            <%= f.text_field :days_supply, class: 'form-control' %>
+            <%= f.text_field :days_supply, name: "total_info[medications][][days_supply]", class: 'form-control', value: medication.days_supply %>
           </div>
           <div class="form-group">
             <%= f.label :notes, '備考' %>
-            <%= f.text_area :notes, class: 'form-control' %>
+            <%= f.text_area :notes, name: "total_info[medications][][notes]", class: 'form-control', value: medication.notes %>
           </div>
         </div>
-      </div>
+        <%= link_to "削除", date_hospital_medication_path(@date_hospital, medication), method: :delete, data: { confirm: "本当に削除してよろしいですか？" } %>
+       <% end %> 
+    </fieldset>
      <div class="sell-btn-contents">
         <%= f.submit "変更する" ,class:"sell-btn" %>
         <%= link_to 'もどる', date_hospital_medication_path(@date_hospital, date_hospital_id: @date_hospital.id), class:"back-btn" %>
