--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,70 +1,54 @@
 
+<%= render "shared/second-header"%>
 
 <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
 
-<div class='form-wrap'>
-  <div class='form-header'>
-    <h1 class='form-header-text'>
-      ご本人情報入力
-    </h1>
+<div class="container">
+  <div>
+    <h1 >ご本人情報入力</h1>
   </div>
 
   <%= render 'devise/shared/error_messages', model: f.object %>
 
-  <div class="form-group">
-    <p class='form-info-header'>
-      本人確認
-    </p>
+  <div class="mb-3">
+    <p >本人確認</p>
   </div>
 
-  <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">氏名</label>
-      <span class="indispensable">必須</span>
-    </div>
-    <%= f.text_area :name, class:"input-default", id:"nickname", placeholder:"例) 佐藤太郎", maxlength:"40" %>
+  <div class="mb-3">
+    <label class="form-label">氏名</label>
+    <span class="form-label">必須</span>
+    <%= f.text_area :name, class:"form-control", id:"nickname", placeholder:"例) 佐藤太郎", maxlength:"40" %>
   </div>
-  <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">氏名カナ</label>
-      <span class="indispensable">必須</span>
-    </div>
-    <%= f.text_area :name_kana, class:"input-default", id:"nickname", placeholder:"例) サトウタロウ", maxlength:"40" %>
+  <div class="mb-3">
+    <label class="form-label">氏名カナ</label>
+    <span class="form-label">必須</span>
+    <%= f.text_area :name_kana, class:"form-control", id:"nickname", placeholder:"例) サトウタロウ", maxlength:"40" %>
   </div>
-  <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">メールアドレス</label>
-      <span class="indispensable">必須</span>
-    </div>
-    <%= f.email_field :email, class:"input-default", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
+  <div class="mb-3">
+    <label class="form-label">メールアドレス</label>
+    <span class="form-label">必須</span>
+    <%= f.email_field :email, class:"form-control", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
   </div>
-  <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">パスワード</label>
-      <span class="indispensable">必須</span>
-    </div>
-    <%= f.password_field :password, class:"input-default", id:"password", placeholder:"6文字以上の半角英数字" %>
+  <div class="mb-3">
+    <label class="form-label">パスワード</label>
+    <span class="form-label">必須</span>
+    <%= f.password_field :password, class:"form-control", id:"password", placeholder:"6文字以上の半角英数字" %>
     <p class='info-text'>※英字と数字の両方を含めて設定してください</p>
   </div>
-  <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">パスワード(確認)</label>
-      <span class="indispensable">必須</span>
-    </div>
-    <%= f.password_field :password_confirmation, class:"input-default", id:"password-confirmation", placeholder:"同じパスワードを入力して下さい" %>
+  <div class="mb-3">
+    <label class="form-label">パスワード(確認)</label>
+    <span class="form-label">必須</span>
+    <%= f.password_field :password_confirmation, class:"form-control", id:"password-confirmation", placeholder:"同じパスワードを入力して下さい" %>
   </div>
   
   
-  <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">生年月日</label>
-      <span class="indispensable">必須</span>
-    </div>
-    <div class='input-birth-wrap'>
+  <div class="mb-3">
+      <label class="form-label">生年月日</label>
+      <span class="form-label">必須</span>
       <%= raw sprintf(
                   f.date_select(
                     :birth_date,
-                    class:'select-birth',
+                    class:"form-select",
                     id:"birth-date",
                     use_month_numbers: true,
                     prompt:'--',
@@ -72,13 +56,11 @@
                     end_year: (Time.now.year - 5),
                     date_separator: '%s'),
                   "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
-    </div>
   </div>
- 
-  <div class='register-btn'>
-    <%= f.submit "ご本人情報登録" ,class:"register-orange-btn" %>
-  </div>
- 
+
+  <%= f.submit "ご本人情報登録" ,class:"w-100 btn btn-lg btn-primary" %>
+
+
 </div>
 <% end %>
 
