--- a/app/views/date_hospitals/new.html.erb
+++ b/app/views/date_hospitals/new.html.erb
@@ -7,25 +7,30 @@
   <%= render 'shared/error_messages', model: f.object %>
 
   <div class="container">
-    <div class='input-birth-wrap'>
-      <%= raw sprintf(
-                      f.date_select(
-                        :date,
-                        class:'select-birth',
-                        id:"birth-date",
-                        use_month_numbers: true,
-                        prompt:'--',
-                        start_year: (Time.now.year - 5),
-                        end_year: (Time.now.year),
-                        date_separator: '%s'),
-                      "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
-    </div>
-    <div class="items-explain">
-      <div class="weight-bold-text">
-        病院名
-        <span class="indispensable">必須</span>
+    <div class="row">
+      <div class="col-lg-3">
+        <%= f.label :date, '処方された日' %>
+        <div class='input-group'>
+          
+          <%= raw sprintf(
+                          f.date_select(
+                            :date,
+                            class:'form-select',
+                            id:"birth-date",
+                            use_month_numbers: true,
+                            prompt:'--',
+                            start_year: (Time.now.year - 5),
+                            end_year: (Time.now.year),
+                            date_separator: '%s'),
+                          "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
+        </div>
+      </div>  
+      <div class="col-lg-9">
+        <div class="mb-3">
+          <%= f.label :hospital_name, '病院名' %>
+          <%= f.text_field :hospital_name, class:"form-control", maxlength:"40" %>
+        </div>
       </div>
-      <%= f.text_area :hospital_name, class:"items-text", id:"item-info", placeholder:"病院名"  ,maxlength:"40" %>
     </div>
     <!--ボタンをクリックしたらJavascriptファイル内の関数addForm()を実行する-->
     <div class="bt_addForm">
@@ -34,23 +39,31 @@
     <fieldset>
       <legend>薬の情報</legend>
       <div class="medication-fields", id="medications" >
-        <div class=>
+        <div class="mb-3">
           <%= f.label :medicine_name, '薬名' %>
           <%= f.text_field :medicine_name, name: "total_info[medications][][medicine_name]", class: 'form-control' %>
         </div>
-        <div class=>
-          <%= f.label :timing, '飲むタイミング' %>
-          <%= f.text_field :timing, name: "total_info[medications][][timing]", class: 'form-control' %>
+        <div class="row">
+          <div class="col-4">
+            <div class="mb-3">
+              <%= f.label :timing, '飲むタイミング' %>
+              <%= f.text_field :timing, name: "total_info[medications][][timing]", class: 'form-control' %>
+            </div>
+          </div>
+          <div class="col-4">  
+            <div class="mb-3">
+              <%= f.label :individual, '個数' %>
+              <%= f.text_field :individual, name: "total_info[medications][][individual]", class: 'form-control' %>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="mb-3">
+              <%= f.label :days_supply, '何日分' %>
+              <%= f.text_field :days_supply, name: "total_info[medications][][days_supply]", class: 'form-control' %>
+            </div>
+          </div>
         </div>
-        <div class=>
-          <%= f.label :individual, '個数' %>
-          <%= f.text_field :individual, name: "total_info[medications][][individual]", class: 'form-control' %>
-        </div>
-        <div class=>
-          <%= f.label :days_supply, '何日分' %>
-          <%= f.text_field :days_supply, name: "total_info[medications][][days_supply]", class: 'form-control' %>
-        </div>
-        <div class=>
+        <div class="mb-3">
           <%= f.label :notes, '備考' %>
           <%= f.text_area :notes, name: "total_info[medications][][notes]", class: 'form-control' %>
         </div>
