--- a/app/views/medications/edit.html.erb
+++ b/app/views/medications/edit.html.erb
@@ -1,65 +1,81 @@
 <%= render "shared/header" %>
-<p>お薬編集ページ</p>
+
+<h2 class="text-center">お薬編集ページ</h2>
 
 <%= form_with model: @total_info, url: date_hospital_medication_path(@date_hospital, @medications), method: :put, local: true do |f| %>
 
   <%= render 'shared/error_messages', model: f.object %>
 
-    <div class='input-birth-wrap'>
-      <%= raw sprintf(
-                  f.date_select(
-                    :date,
-                    class:'select-birth',
-                    id:"birth-date",
-                    use_month_numbers: true,
-                    prompt:'--',
-                    start_year: (Time.now.year - 5),
-                    end_year: (Time.now.year),
-                    date_separator: '%s'),
-                  "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3">
+        <%= f.label :date, '処方された日' %>
+        <div class='input-group'>
+          
+          <%= raw sprintf(
+                          f.date_select(
+                            :date,
+                            class:'form-select',
+                            id:"birth-date",
+                            use_month_numbers: true,
+                            prompt:'--',
+                            start_year: (Time.now.year - 5),
+                            end_year: (Time.now.year),
+                            date_separator: '%s'),
+                          "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
+        </div>
+      </div>  
+      <div class="col-lg-9">
+        <div class="mb-3">
+          <%= f.label :hospital_name, '病院名' %>
+          <%= f.text_field :hospital_name, class:"form-control", placeholder:"病院名"  ,maxlength:"40" %>
+        </div>
       </div>
-    <div class="items-explain">
-      <div class="weight-bold-text">
-        病院名
-        <span class="indispensable">必須</span>
-      </div>
-      <%= f.text_area :hospital_name, class:"items-text", id:"item-info", placeholder:"病院名"  ,maxlength:"40" %>
     </div>
     <!--ボタンをクリックしたらJavascriptファイル内の関数addForm()を実行する-->
     <div class="bt_addForm">
-      <button type="button" id="add_form" class="add_form">薬を追加</button>
+      <button type="button" id="add_form" class="add_form btn btn-primary">薬を追加</button>
     </div>
     <fieldset>
       <legend>薬の情報</legend>
       <% @medications.each do |medication|%>
         <div class="medication-fields", id="medications" >
-          <div class="form-group">
+          <div class="mb-3">
             <%= f.label :medicine_name, '薬名' %>
             <%= f.text_field :medicine_name, name: "total_info[medications][][medicine_name]", class: 'form-control', value: medication.medicine_name %>
           </div>
-          <div class="form-group">
-            <%= f.label :timing, '飲むタイミング' %>
-            <%= f.text_field :timing, name: "total_info[medications][][timing]", class: 'form-control', value: medication.timing %>
+          <div class="row">
+            <div class="col-4">
+              <div class="mb-3">
+                <%= f.label :timing, '飲むタイミング' %>
+                <%= f.text_field :timing, name: "total_info[medications][][timing]", class: 'form-control', value: medication.timing %>
+              </div>
+            </div>
+            <div class="col-4">  
+              <div class="mb-3">
+                <%= f.label :individual, '個数' %>
+                <%= f.text_field :individual, name: "total_info[medications][][individual]", class: 'form-control', value: medication.individual %>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="mb-3">
+                <%= f.label :days_supply, '何日分' %>
+                <%= f.text_field :days_supply, name: "total_info[medications][][days_supply]", class: 'form-control', value: medication.days_supply %>
+              </div>
+            </div>
           </div>
-          <div class="form-group">
-            <%= f.label :individual, '個数' %>
-            <%= f.text_field :individual, name: "total_info[medications][][individual]", class: 'form-control', value: medication.individual %>
-          </div>
-          <div class="form-group">
-            <%= f.label :days_supply, '何日分' %>
-            <%= f.text_field :days_supply, name: "total_info[medications][][days_supply]", class: 'form-control', value: medication.days_supply %>
-          </div>
-          <div class="form-group">
+          <div class="mb-3">
             <%= f.label :notes, '備考' %>
             <%= f.text_area :notes, name: "total_info[medications][][notes]", class: 'form-control', value: medication.notes %>
           </div>
         </div>
-        <%= link_to "削除", date_hospital_medication_path(@date_hospital, medication), method: :delete, data: { confirm: "本当に削除してよろしいですか？" } %>
-       <% end %> 
+        <%= link_to "削除", date_hospital_medication_path(@date_hospital, medication), method: :delete, class: "btn btn-danger", data: { confirm: "本当に削除してよろしいですか？" } %>
+      <% end %> 
     </fieldset>
-     <div class="sell-btn-contents">
-        <%= f.submit "変更する" ,class:"sell-btn" %>
-        <%= link_to 'もどる', date_hospital_medication_path(@date_hospital, date_hospital_id: @date_hospital.id), class:"back-btn" %>
-        <%= link_to "削除", date_hospital_path(@date_hospital), method: :delete, data: { confirm: "本当に削除してよろしいですか？" }, class:"item-destroy" %>
-      </div>
-  <% end %>
+    <br>
+    <%= f.submit "変更する" ,class:"btn btn-primary" %>
+    <%= link_to 'もどる', date_hospital_medication_path(@date_hospital, date_hospital_id: @date_hospital.id), class:"btn btn-light text-dark me-2" %>
+    <%= link_to "削除", date_hospital_path(@date_hospital), method: :delete, class:"btn btn-danger", data: { confirm: "本当に削除してよろしいですか？" } %>
+  </div>
+<% end %>
+<br>
