エラーを日本語に変更

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
   <div class="container w-50">
     <h1 class="text-center">ご本人情報入力</h1>
 
-    <%= render 'devise/shared/error_messages', model: f.object %>
+    <%= render 'shared/error_messages', model: f.object %>
 
     <div class="mb-3">
       <label class="form-label">氏名</label>
