--- a/app/views/date_hospitals/new.html.erb
+++ b/app/views/date_hospitals/new.html.erb
@@ -2,6 +2,17 @@
 
 <h2 class="text-center">お薬登録ページ</h2>
 
+<%= form_with model: @date_hospitals, url: upload_date_hospitals_path, local: true, html: { multipart: true } do |f| %>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-5">
+        <%= f.label :image, '画像をアップロード' %>
+        <%= f.file_field :image, class: 'form-control', id: 'image-upload-field' %>
+      </div>
+    </div>
+  </div>
+<% end %>
+
 <%= form_with model: @total_info , url: date_hospitals_path, local: true do |f| %>
 
   <%= render 'shared/error_messages', model: f.object %>
